final stats page

--- a/templates/neverever/statementTitles.html
+++ b/templates/neverever/statementTitles.html
@@ -8,7 +8,7 @@
             <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
                 {% for statement in statements %}
                     <li role="presentation" class="cat_list_item">
-                        <a role="menuitem" tabindex="-1" href="#state" class="single_statement"
+                        <a role="menuitem" tabindex="-1" class="single_statement"
                            data-title="{{statement.title}}">{{ statement.title }}</a>
                     </li>
                 {% endfor %}
