chosen category now displaying

--- a/templates/neverever/statementTitles.html
+++ b/templates/neverever/statementTitles.html
@@ -1,4 +1,5 @@
 {% if statements %}
+    Category: {{ cat_name }}
     <div class="dropdown-box dropdown-box-wide text-center">
         <div class="dropdown">
           <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
