--- a/templates/neverever/playOptions.html
+++ b/templates/neverever/playOptions.html
@@ -24,7 +24,9 @@
                     </div>
                      Enable NSFW (adult content) statements:<br>
                      <div class="switch-box">
-                        <input id="{{ field.auto_id }}" name="{{ field.html_name }}" type="checkbox">
+                        <input id="{{ field.auto_id }}" name="{{ field.html_name }}"
+                               {% if field.value %}checked="checked"{% endif %}
+                               type="checkbox">
                      </div>
                  </div>
             {% endif %}
